--- a/05_train_churn_model.ipynb
+++ b/05_train_churn_model.ipynb
@@ -6,7 +6,7 @@
       "name": "05-train-churn-model.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOXiLr2vWVYt0JxbNbDj9hr",
+      "authorship_tag": "ABX9TyPVeGypaD9yJLqaH+IKyO1P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GCpOVtnAyr3X",
-        "outputId": "31ff418d-f51c-4529-b004-a22f3f0c1082"
+        "outputId": "b63c307d-5e60-47a0-b220-96d4c0f6e952"
       },
       "source": [
         "!wget $data -O data-week-3.csv"
@@ -107,16 +107,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-10-08 14:47:12--  https://raw.githubusercontent.com/alexeygrigorev/mlbookcamp-code/master/chapter-03-churn-prediction/WA_Fn-UseC_-Telco-Customer-Churn.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2021-10-08 16:16:22--  https://raw.githubusercontent.com/alexeygrigorev/mlbookcamp-code/master/chapter-03-churn-prediction/WA_Fn-UseC_-Telco-Customer-Churn.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 977501 (955K) [text/plain]\n",
             "Saving to: ‘data-week-3.csv’\n",
             "\n",
             "\rdata-week-3.csv       0%[                    ]       0  --.-KB/s               \rdata-week-3.csv     100%[===================>] 954.59K  --.-KB/s    in 0.05s   \n",
             "\n",
-            "2021-10-08 14:47:12 (17.5 MB/s) - ‘data-week-3.csv’ saved [977501/977501]\n",
+            "2021-10-08 16:16:22 (19.8 MB/s) - ‘data-week-3.csv’ saved [977501/977501]\n",
             "\n"
           ]
         }
@@ -141,7 +141,7 @@
           "height": 309
         },
         "id": "KsS64-WJznh9",
-        "outputId": "caf5d9d4-772a-48e9-985b-779f1ad4dcfd"
+        "outputId": "7f7898c4-8e0c-442c-ce8a-bcee68d8b20c"
       },
       "source": [
         "df.head()"
@@ -363,7 +363,7 @@
       "source": [
         "df_full_train,df_test = train_test_split(df,test_size=0.2,random_state=1)"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -393,7 +393,7 @@
         "    'paymentmethod',\n",
         "]"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
         "\n",
         "  return dv,model"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -432,7 +432,7 @@
         "  \n",
         "  return y_pred"
       ],
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -444,7 +444,7 @@
         "C = 1.0\n",
         "n_splits = 5"
       ],
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -454,7 +454,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Br7tPWfl3V-S",
-        "outputId": "bada7e11-1c6e-4b88-d612-b55bfe3b06af"
+        "outputId": "6bc1e9b4-ba5a-428a-9b7f-6c25bd604a99"
       },
       "source": [
         "kfold = KFold(n_splits=n_splits, shuffle=True, random_state=1)\n",
@@ -477,7 +477,7 @@
         "\n",
         "print('C=%s %.3f +- %.3f' % (C,np.mean(scores), np.std(scores)))"
       ],
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,12 +495,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y_yC8UHo7CX1",
-        "outputId": "4241c47b-dc97-47d0-a704-d79d806c6a26"
+        "outputId": "04405caf-03cc-4600-b52e-d774a1950686"
       },
       "source": [
         "scores"
       ],
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,7 +514,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 15
         }
       ]
     },
@@ -525,7 +525,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vzcBq2XW9RxR",
-        "outputId": "3398f82e-d5c2-4466-a952-c92df79b9a74"
+        "outputId": "ae9a90ce-a9b5-441c-8a18-64001f23936f"
       },
       "source": [
         "dv , model = train(df_full_train,df_full_train.churn.values, C=1.0)\n",
@@ -535,7 +535,7 @@
         "auc = roc_auc_score(y_test, y_pred)\n",
         "auc\n"
       ],
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -545,7 +545,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 16
         }
       ]
     },
@@ -566,7 +566,7 @@
       "source": [
         "import pickle"
       ],
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -577,14 +577,14 @@
           "height": 35
         },
         "id": "a40HF02-nt6g",
-        "outputId": "9e332c3a-08c9-4463-a3ba-8e5d5d0a618b"
+        "outputId": "52c3ae2d-185a-4560-a8d1-f98f5d526c95"
       },
       "source": [
         "#output_file  = 'model_C=%s.bin' % C\n",
         "output_file = f'model_C={C}.bin'\n",
         "output_file"
       ],
-      "execution_count": 17,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,7 +597,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 19
         }
       ]
     },
@@ -611,7 +611,7 @@
         "pickle.dump((dv,model), f_out)\n",
         "f_out.close()"
       ],
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -624,7 +624,7 @@
         "  pickle.dump((dv, model), f_out)\n",
         " "
       ],
-      "execution_count": 19,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -644,7 +644,18 @@
       "source": [
         "import pickle"
       ],
-      "execution_count": 20,
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "heaypYlCtP8P"
+      },
+      "source": [
+        "model_file = 'model_C=1.0.bin'"
+      ],
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -653,22 +664,113 @@
         "id": "K-A7nVEqs2-y"
       },
       "source": [
-        "with open(output_file, 'rb') as f_in:\n",
-        "  (dv, model) = pickle.load(f_in)"
+        "with open(model_file, 'rb') as f_in:\n",
+        "  dv, model = pickle.load(f_in)"
       ],
-      "execution_count": 21,
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ncT-diGJs2uk"
+        "id": "ncT-diGJs2uk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d7c049b2-a2b3-44da-a7da-6748d281480b"
       },
       "source": [
-        ""
+        "(dv, model)"
       ],
-      "execution_count": 21,
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(DictVectorizer(dtype=<class 'numpy.float64'>, separator='=', sort=True,\n",
+              "                sparse=False),\n",
+              " LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+              "                    intercept_scaling=1, l1_ratio=None, max_iter=1000,\n",
+              "                    multi_class='auto', n_jobs=None, penalty='l2',\n",
+              "                    random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+              "                    warm_start=False))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kT_4WxweudcA"
+      },
+      "source": [
+        "customer = {\n",
+        "    \n",
+        "    'gender': 'female',\n",
+        "    'seniorcitizen':0,\n",
+        "    'partner':'yes',\n",
+        "    'dependents':'no',\n",
+        "    'phoneservice':'no',\n",
+        "    'multiplelines':'no_phone_service',\n",
+        "    'internetservice':'dsl',\n",
+        "    'onlinesecurity':'no',\n",
+        "    'onlinebackup':'yes',\n",
+        "    'deviceprotection':'no',\n",
+        "    'techsupport':'no',\n",
+        "    'streamingtv':'no',\n",
+        "    'streamingmovies':'no',\n",
+        "    'contract':'month-to-month',\n",
+        "    'paperlessbilling':'yes',\n",
+        "    'paymentmethod':'electronic_check',\n",
+        "    'tenure':1,\n",
+        "    'monthlycharges':29.85,\n",
+        "    'totalcharges':29.85\n",
+        "    \n",
+        "}"
+      ],
+      "execution_count": 31,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "StPCinEjviy9"
+      },
+      "source": [
+        "X = dv.transform([customer])"
+      ],
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dvEQi49XvyPW",
+        "outputId": "a3d4bf57-c5a8-4316-840b-19b6f90bbde1"
+      },
+      "source": [
+        "model.predict_proba(X)[0,1]"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6363584152751962"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     }
   ]
 }
